# personalJesus

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  start.sh
data/: chat.db
src/: cli.rs  lib.rs  main.rs  tools.rs
src/app/: globals.css  layout.js  page.js
src/app/api/chat/: route.js
static/: index.html
