[package]
name = "pj"
version = "0.1.0"
edition = "2024"
default-run = "pj-web"

[dependencies]
actix-web = "4.9"
actix-files = "0.6"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli", "deflate", "zstd"] }
futures = "0.3"
tokio-stream = "0.1"
env_logger = "0.11"
log = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
glob = "0.3"
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"

[[bin]]
name = "pj-web"
path = "src/main.rs"

[[bin]]
name = "pj"
path = "src/cli.rs"
